# dune-heateq-dg

./: .gitignore  CMakeLists.txt  README  config.h.cmake  heat-DG.pc.in  hello.c  sample1.ini
cmake/modules/: CMakeLists.txt
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt
dune/heat-DG/: CMakeLists.txt  IncludesDUNE.hh
dune/heat-DG/heat/: CMakeLists.txt  boundary_conditions.hh  characteristic_values.hh  driver.hh  include_problem.hh  initial_conditions.hh  parameters.hh
dune/heat-DG/heat/grids/: CMakeLists.txt  grid-10-500.msh  grid-100-500.msh  grid-Ex2-Finer-equi.msh  grid-Ex2-equi.msh  grid-Ex2-fine.msh  grid-Ex2-finer.msh  grid-Ex2-nuniform.msh  grid-Ex2.msh  grid-Ex3-Coarse-reduced.msh  grid-Ex3-Coarse.msh  grid-Ex3-Fine-reduced.msh  grid-Ex3-Fine.msh  grid-Ex3-Finer-reduced.msh  grid-Ex3-Finer.msh  grid-Ex3-ndim-equidist.msh  grid-Ex3-ndim-fine.msh  grid-Ex3-ndim-finer.msh  grid-Ex3-ndim.msh  grid-Ex3.msh  grid.geo  grid.hh  grid.msh  grid2.msh  grid3.msh  oneD.msh
dune/heat-DG/heat/inputs/: CMakeLists.txt  sample.ini  sample_mod.ini  sample_original.ini
dune/heat-DG/heat/properties/: CH4.hh  CMakeLists.txt  H2O.hh  eosCH4.hh  hydrate.hh  hydrate_phase_change.hh  hydraulic_properties.hh  include_properties.hh  mixture.hh  salt.hh  soil.hh
dune/heat-DG/operators/: CMakeLists.txt  Initial.hh  LocalOperator.hh  TimeOperator.hh  indices.hh
src/: CMakeLists.txt  heat.cc
