#install headers
install(FILES LocalOperator.hh DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/heat-DG/operators)
install(FILES TimeOperator.hh DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/heat-DG/operators)
install(FILES Initial.hh DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/heat-DG/operators)
install(FILES indices.hh DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/heat-DG/operators)
